--- a/Views/Item/Index.cshtml
+++ b/Views/Item/Index.cshtml
@@ -52,7 +52,7 @@
 
 </figure>
 <form class="form-inline" action="/action_page.php">
-    <div class="row">
+    @*<div class="row">
         <div class="col-md-6">
             <div class="row">
                 <div class="col-md-3"><label for="cars">Loại biểu đồ:</label></div>
@@ -97,9 +97,10 @@
             <a href="" class="btn btn-primary mb-2">Submit</a>
         </div>
         <div class="col-md-6">
-            <div id="container"></div>
+
         </div>
-    </div>
+    </div>*@
+    <div id="container"></div>
 </form>
 @*<div>
         <div class="row">
