--- a/Views/Item/Index.cshtml
+++ b/Views/Item/Index.cshtml
@@ -55,17 +55,17 @@
 
 </figure>
 <form class="form-inline" >
-    <div class="row">
+    @*<div class="row">
         <div class="col-md-6">
             <div class="row">
                 <div class="col-sm-3" style="margin-top:12px;"> <label for="cars">Chọn chủ đề:</label></div>
                 <div class="col-sm-9" style="margin-top:12px;">
-                    @*<select id="selectChuDe" multiple="multiple">
+                    <select id="selectChuDe" multiple="multiple">
             <option value="Bootstrap">Bootstrap Tips</option>
             <option value="HTML">HTML</option>
             <option value="CSS">CSS tricks</option>
             <option value="angular">Angular JS</option>
-        </select>*@
+        </select>
                     <select class="form-control"  id="IdCities" onclick="city.showCity()">
                         <option>Select City</option>
                     </select>
@@ -142,12 +142,12 @@
             </div>
         </div>
         <div class="col-md-6">
-            <div id="container"></div>
+            
         </div>
-    </div>
+    </div>*@
 
 </form>
-
+<div id="container"></div>
 
 <script type="text/javascript">
     $(document).ready(function () {
