--- a/Views/Settings/Settings.cshtml
+++ b/Views/Settings/Settings.cshtml
@@ -1,99 +1,24 @@
 ﻿@inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<Christoc.Modules.Chart.Models.Settings>
 
 @using DotNetNuke.Web.Mvc.Helpers
+@using Christoc.Modules.Chart.Models
+@{
+    var cities = ViewBag.Cities as List<GetCityAll>;
+    var selectY = ViewBag.SelectY as List<GetChart>;
+}
 
-
-
-@*<h2 id="dnnSitePanel-BasicSettings" class="dnnFormSectionHead"><a href="" class="dnnSectionExpanded">@Dnn.LocalizeString("BasicSettings")</a></h2>*@
-@*<form class="form-inline">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="row">
-                    <div class="col-sm-3"><label for="cars">Loại biểu đồ:</label></div>
-                    <div class="col-sm-9">
-                        <label class="radio-inline">
-                            <input type="radio" name="typechart" checked value="column">Cột
-                        </label>
-                        <label class="radio-inline">
-                            <input type="radio" name="typechart" value="line" />Đường
-                        </label>
-                        <label class="radio-inline">
-                            <input type="radio" name="typechart" value="bar" />Bar
-                        </label>
-                        <label class="radio-inline">
-                            <input type="radio" name="typechart" value="area" />Vùng
-                        </label>
-                        <label class="radio-inline">
-                            <input type="radio" name="typechart" value="spline" />Point
-                        </label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-3"> <label for="cars">Tên biểu đồ:</label></div>
-                    <div class="col-sm-9"><input type="text" class="form-control mb-2 mr-sm-2" id=""></div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-3"> <label for="cars">Mô tả biểu đồ:</label></div>
-                    <div class="col-sm-9"><input type="text" class="form-control mb-2 mr-sm-2" id=""></div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-3"> <label for="cars">Tên AxisX:</label></div>
-                    <div class="col-sm-9"><input type="text" class="form-control mb-2 mr-sm-2" id=""></div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-3"><label for="cars">Tên AxisY:</label></div>
-                    <div class="col-sm-9"><input type="text" class="form-control mb-2 mr-sm-2" id=""></div>
-                </div>
-
-                <button type="submit" class="btn btn-primary mb-2">Submit</button>
-            </div>
-            <div class="col-sm-6">
-                <div id="container"></div>
-            </div>
-        </div>
-
-    </form>
-
-
-
-
-    <select multiple id="select">
-        <option class="custom-checkbox" value="C++">C++</option>
-        <option class="custom-checkbox" value="C#">C#</option>
-        <option class="custom-checkbox" value="Java">Java</option>
-        <option class="custom-checkbox" value="Objective-C">Objective-C</option>
-        <option class="custom-checkbox" value="JavaScript">JavaScript</option>
-        <option class="custom-checkbox" value="Perl">Perl</option>
-        <option class="custom-checkbox" value="PHP">PHP</option>
-        <option class="custom-checkbox" value="Ruby on Rails">Ruby on Rails</option>
-        <option class="custom-checkbox" value="Android">Android</option>
-        <option class="custom-checkbox" value="iOS">iOS</option>
-        <option class="custom-checkbox" value="HTML">HTML</option>
-        <option class="custom-checkbox" value="XML">XML</option>
-    </select>
-
-    <script>
-        $(document).ready(function () {
-            $('#select').multiselect({
-                nonSelectedText: 'Select expertise!',
-                buttonWidth: 250,
-                enableFiltering: true
-            });
-        });
-    </script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link href="~/desktopmodules/mvc/Chart/scripts/bootstrap-multiselect.css" rel="stylesheet" />
-    <script src="~/desktopmodules/mvc/Chart/scripts/bootstrap-multiselect.js"></script>*@
 
 <fieldset>
     <div class="container">
         <div class="row">
             <div class="col-sm-3" style="margin-top:12px;"> <label for="cars">Chọn chủ đề:</label></div>
-            @*@Html.Partial("_showCity");*@
-           <div class="col-sm-9" style="margin-top:12px;">
-                <select id="IdCities" class="form-control" href="javascript:;" @*onchange="topicCity.showPerson()"*@ onclick="city.showCity()">
-                        @*<option value="@item.IdCity">@item.City</option>*@
+            <div class="col-sm-9" style="margin-top:12px;">
+                <select id="IdCities" class="form-control" href="javascript:;" onchange="showPerson(this.value)">
+                    @foreach (var item in cities)
+                    {
+                        <option value="@item.IdCity">@item.CityName</option>
+                    }
+
                 </select>
             </div>
         </div>
@@ -136,7 +61,7 @@
         <div class="row">
             <div class="col-sm-3" style="margin-top:12px;"><label for="cars">Chọn AxisX:</label></div>
             <div class="col-sm-9" style="margin-top:12px;">
-                <select id="selectX" multiple="multiple">
+                <select id="selectX" class="form-control" >
                     <option value="Bootstrap">Bootstrap Tips</option>
                     <option value="HTML">HTML</option>
                     <option value="CSS">CSS tricks</option>
@@ -147,114 +72,129 @@
         <div class="row">
             <div class="col-sm-3" style="margin-top:12px;"><label for="cars">Chọn AxisY:</label></div>
             <div class="col-sm-9" style="margin-top:12px;">
-                <select id="selectY" multiple="multiple">
-                    <option value="Bootstrap">Bootstrap Tips</option>
-                    <option value="HTML">HTML</option>
-                    <option value="CSS">CSS tricks</option>
-                    <option value="angular">Angular JS</option>
+                <select id="selectY" multiple="multiple" class="multipleselect2">
+                    @foreach (var item in cities)
+                    {
+                        <option value="@item.IdCity">@item.CityName</option>
+                    }
                 </select>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-3" style="margin-top:12px;"><label for="cars">Bài viết cùng chủ đề:</label></div>
             <div class="col-sm-9" style="margin-top:12px;">
-                <select id="selectPerson" multiple="multiple">
-                    <option value="Bootstrap">Bootstrap Tips</option>
-                    <option value="HTML">HTML</option>
-                    <option value="CSS">CSS tricks</option>
-                    <option value="angular">Angular JS</option>
+                <select id="selectPerson" multiple="multiple" class="multipleselect2">
+                    @*<option value="Bootstrap">Bootstrap Tips</option>*@
                 </select>
             </div>
         </div>
     </div>
 </fieldset>
 <script>
-
-    var city = {} || city;
     $(document).ready(function () {
-        $('#selectX').multiselect({
-            includeSelectAllOption: true,
-            nonSelectedText: '--Chọn--',
-            buttonWidth: 510,
-            enableFiltering: true
-        });
-        $('#selectY').multiselect({
-            includeSelectAllOption: true,
-            nonSelectedText: '--Chọn--',
-            buttonWidth: 510,
-            enableFiltering: true
-        });
-        $('#selectPerson').multiselect({
-            includeSelectAllOption: true,
-            nonSelectedText: '--Chọn--',
-            buttonWidth: 510,
-            enableFiltering: true
-        });
-        $('#selectChuDe').multiselect({
-            includeSelectAllOption: true,
-            nonSelectedText: '--Chọn--',
-            buttonWidth: 510,
-            enableFiltering: true
-        });
+        $('.multipleselect2').multiselect({
+                        includeSelectAllOption: true,
+                        nonSelectedText: '--Chọn--',
+                        buttonWidth: 510,
+                        enableFiltering: true
+                    });
+        var rvtoken = $("input[name='__RequestVerificationToken']").val();
+        var ModuleId = @Dnn.ModuleContext.ModuleId;
+        var TabId = @Dnn.ModuleContext.TabId;
+        var siteRoot = dnn.getVar("sf_siteRoot", "/");
+        showPerson = function (id) {
+            console.log(id);
+            $("#selectPerson").removeClass('multipleselect2');
+            $.ajax({
+                url: siteRoot + 'DesktopModules/MVC/Chart/Settings/GetPersons',
+                method: "GET",
+                contentType: "application/json; charset=utf-8", dataType: "json",
+                dataType: "json",
+                data: { id: id },
+                headers: {
+                    "ModuleId": ModuleId,
+                    "TabId": TabId,
+                    "RequestVerificationToken": rvtoken
+                },
+                success: function (data) {
+                    //alert(data);
+                    var result = [];
+                    var persons = JSON.parse(data.data);
+                    //alert(persons.Name);
+                    //console.log(persons);
+                    $(`#selectPerson`).empty();
+                    for (var i = 0; i < persons.length; i++) {
+                        $('#selectPerson').append(`<option value=${persons[i].Id}>${persons[i].Name}</option>`)
+                    }
+                    $('#selectPerson').multiselect('rebuild');
+                    $('.multipleselect2').multiselect({
+                        includeSelectAllOption: true,
+                        nonSelectedText: '--Chọn--',
+                        buttonWidth: 350,
+                        enableFiltering: true
+                    });
+                }
+               
+            });
+        }
+        //showX = function () {
+        //    //$("#selectPerson").removeClass('multipleselect2');
+        //    $.ajax({
+        //        url: siteRoot + 'DesktopModules/MVC/Chart/Settings/GetPersons',
+        //        method: "GET",
+        //        contentType: "application/json; charset=utf-8", dataType: "json",
+        //        dataType: "json",
+        //        data: { id: id },
+        //        headers: {
+        //            "ModuleId": ModuleId,
+        //            "TabId": TabId,
+        //            "RequestVerificationToken": rvtoken
+        //        },
+        //        success: function (data) {
+        //            //alert(data);
+        //            var persons = JSON.parse(data.data);
+        //            //alert(persons.Name);
+        //            console.log(persons);
+        //            $(`#selectX`).empty();
+        //            for (var i = 0; i < persons.length; i++) {
+        //                // alert(persons[i].Name);
+        //                $('#selectX').append(`<option value=${persons[i].Id}>${persons[i].Name}</option>`)
+        //            }
+        //        }
+
+        //    });
+        //}
+        
+
     });
+    
+    //var pageSettings = function () {
+    //    var Page = pageSettings;
+    //    var chart;
+    //    var idCities = $('#IdCities').val();
+    //    var siteRoot = dnn.getVar("sf_siteRoot", "/");
+    //    function requestData() {
+    //        var AxisY = [];
+    //        var AxisX = [];
+    //        $('#AXisY option:selected').each(function () {
+    //            AxisY.push($(this).val());
+    //        });
+    //        if ($('#selectPerson option:selected').length > 0) {
+    //            $('#selectPerson option:selected').each(function () {
+    //                AxisX.push($(this).val());
+    //            });
+    //        }
+    //        else {
+    //            AxisX.push(articleId);
+    //        }
+    //}
 
-    @*city.showpPerson = function () {
-         var rvtoken = $("input[name='__RequestVerificationToken']").val();
-        var ModuleId = @Dnn.ModuleContext.ModuleId;
-        var TabId = @Dnn.ModuleContext.TabId;
-        var siteRoot = dnn.getVar("sf_siteRoot", "/");
-        var chartData;
-        $.ajax({
-            url: 'DesktopModules/MVC/Chart/Settings/GetCity',
-            method: "GET",
-            contentType: "application/json; charset=utf-8", dataType: "json",
-            headers: {
-                "ModuleId": ModuleId,
-                "TabId": TabId,
-                "RequestVerificationToken": rvtoken
-            },
-            dataType: "json",
-            success: function (data) {
-                chartData = data.data;
-                $('#selectTopic').empty();
-                $.each(data.chartData, function (i, v) {
-                    $('#selectTopic').append(`<option value=${v.chartData.IdCity} >${v.chartData.CityName}</option>`)
-                });
-            }
-        });
-    }
-
-    subjectResult.init = function () {
-        subjectResult.showClass();
-        subjectResult.showSubject();
-    };*@
-
-    city.showCity = function () {
-         var rvtoken = $("input[name='__RequestVerificationToken']").val();
-        var ModuleId = @Dnn.ModuleContext.ModuleId;
-        var TabId = @Dnn.ModuleContext.TabId;
-        var siteRoot = dnn.getVar("sf_siteRoot", "/");
-        $.ajax({
-            url: siteRoot + 'DesktopModules/MVC/Chart/Settings/GetCity',
-            method: "GET",
-            contentType: "application/json; charset=utf-8", dataType: "json",
-            headers: {
-                "ModuleId": ModuleId,
-                "TabId": TabId,
-                "RequestVerificationToken": rvtoken
-            },
-            dataType: "json",
-            success: function (data) {
-                console.log(data.data);
-                $('#IdCities').empty();
-                $.each(data.data, function (i, v) {
-                    $('#IdCities').append(`<option value=${v.IdCity} >${v.CityName}</option>`)
-                });
-            }
-        });
-    }
+    //$(function () {
+    //    pageSettings();
+    //});
 
 </script>
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/css/bootstrap-multiselect.css" type="text/css" />
